[gd_scene load_steps=16 format=2]

[ext_resource path="res://prefabs/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://prefabs/PLayerBall.tscn" type="PackedScene" id=2]
[ext_resource path="res://font/df_normal.tres" type="DynamicFont" id=3]
[ext_resource path="res://font/Rowdy-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://prefabs/LevelGenerator.gd" type="Script" id=5]
[ext_resource path="res://scenes/Game.gd" type="Script" id=6]
[ext_resource path="res://ui/EndGame.gd" type="Script" id=7]
[ext_resource path="res://ui/UI.gd" type="Script" id=8]
[ext_resource path="res://assets/tile_background.jpg" type="Texture" id=9]
[ext_resource path="res://assets/parallax.jpg" type="Texture" id=10]
[ext_resource path="res://ui/CustomButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://prefabs/LevelGenerator2.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 9
outline_color = Color( 0.239216, 0.239216, 0.239216, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 4
outline_color = Color( 0.113725, 0.113725, 0.113725, 1 )
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="PLayerBall" parent="." instance=ExtResource( 2 )]
position = Vector2( 320, 245 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 600, 300 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_smoothed = true
smoothing_enabled = true
script = ExtResource( 1 )

[node name="LevelGenerator" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="LevelGenerator2" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="lb_score" type="Label" parent="CanvasLayer/UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -213.0
margin_right = 213.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1

[node name="lb_posy" type="Label" parent="CanvasLayer/UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -592.0
margin_top = 516.0
margin_right = -166.0
margin_bottom = 575.0
custom_fonts/font = ExtResource( 3 )
text = "posY "
valign = 1
autowrap = true

[node name="lb_vel" type="Label" parent="CanvasLayer/UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -287.0
margin_top = 27.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 3 )
text = "vel -500"
align = 1

[node name="lb_blocks" type="Label" parent="CanvasLayer/UI"]
margin_left = 30.0
margin_top = 30.0
margin_right = 434.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 3 )
text = "BLOQUES: 5"

[node name="EndGame" type="Control" parent="CanvasLayer"]
pause_mode = 2
margin_right = 1200.0
margin_bottom = 600.0
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/EndGame"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.423529, 0.423529, 0.423529, 0.607843 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/EndGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -148.0
margin_right = 256.0
margin_bottom = 228.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 2

[node name="lb_gameover" type="Label" parent="CanvasLayer/EndGame"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -213.0
margin_top = 56.0
margin_right = 213.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1

[node name="lb_collect" type="Label" parent="CanvasLayer/EndGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.5
margin_top = -110.5
margin_right = 288.5
margin_bottom = -49.5
custom_fonts/font = SubResource( 1 )
text = "SPARKS 2200"
align = 1

[node name="lb_add_sparks" type="Label" parent="CanvasLayer/EndGame"]
modulate = Color( 0.972549, 1, 0.482353, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = -44.0
margin_right = 143.5
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "+80000"
align = 1

[node name="lb_dec_sparks" type="Label" parent="CanvasLayer/EndGame"]
modulate = Color( 0.972549, 1, 0.482353, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = 14.0
margin_right = 143.5
margin_bottom = 72.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "-2000"
align = 1

[node name="HBox" type="HBoxContainer" parent="CanvasLayer/EndGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -334.5
margin_top = 146.0
margin_right = 334.5
margin_bottom = 206.0
custom_constants/separation = 43
alignment = 1

[node name="btn_retry" parent="CanvasLayer/EndGame/HBox" instance=ExtResource( 11 )]
margin_left = 113.0
margin_right = 313.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
text = "RETRY"

[node name="btn_menu" parent="CanvasLayer/EndGame/HBox" instance=ExtResource( 11 )]
margin_left = 356.0
margin_right = 556.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
text = "MAIN MENU"

[node name="Tween" type="Tween" parent="CanvasLayer/EndGame"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0.5 )
motion_offset = Vector2( 0, 100 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.741176, 0.741176, 0.741176, 1 )
margin_left = -1063.0
margin_top = -590.0
margin_right = 1203.0
margin_bottom = 600.0
texture = ExtResource( 9 )
stretch_mode = 2

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )
